# NPS

./: .gitignore  IMPLEMENTATION_CHANGES.md  PROJECT_HANDOVER.md  README.md  STATUS.md  know.md  package-lock.json  package.json  test_camera.py
.continue/: config.json  config.yaml
.continue/rules/: new-rule.md
Frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
Frontend/src/components/: AdminLocalPreview.tsx  AdminLocalStreamer.tsx  AssignmentDialog.tsx  CameraSourceDialog.tsx  CameraTile.tsx  CameraUnlockOverlay.tsx  LocalStreamMirror.tsx  MJPEGRelayStreamer.tsx  SecurityBar.tsx  ThemeToggle.tsx  UserDialog.tsx  ViewerCameraDialog.tsx  ViewerLocalStreamer.tsx
Frontend/src/context/: AppContext.tsx
Frontend/src/lib/: api.ts  (+3 more)
backend/: .dockerignore  .env  .env.dev  .env.example  .env.prod  .gitignore  Dockerfile  README.md  command.txt  nps.db  package-lock.json  package.json  pake_cli.cjs  pyproject.toml  requirements.txt
backend/app/: access.py  audit.py  auth.py  config.py  database.py  deps.py  main.py  mdns_discovery.py  models.py  pake_bridge.py  schemas.py  seed.py  wireguard_manager.py
backend/tests/: conftest.py  test_assignments.py  test_audit.py  test_auth.py  test_rbac.py  test_wireguard.py  test_zero_trust_workflow.py
docs/: API.md  ARCHITECTURE.md  DIAGRAMS.md  MASTER_DOCUMENTATION.md  PRESENTATION.md  PROJECT_HANDOVER.md  THREAT_MODEL.md  work.md  zero-trust_security_alignment_f14d9258.plan.md
pake_demo/: pake_demo.py
(+10 files in other folders)
