[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi==23.1.0",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "psycopg[binary]==3.2.9",
    "pydantic-settings==2.10.1",
    "pyjwt==2.10.1",
    "pytest==8.3.2",
    "python-dotenv==1.1.1",
    "python-multipart>=0.0.28",
    "sqlalchemy==2.0.42",
    "uvicorn[standard]==0.35.0",
]
